fixtures/errors/not_enough_elements/build/lib/index.js
export function main() {
  const [a, b, c] = [1];
  console.log(a);
}
//# sourceMappingURL=./index.js.map
